ui cleanup, spacing fixes
SVN-Revision: 5373

--- a/web-app/css/cma.css
+++ b/web-app/css/cma.css
@@ -38,7 +38,7 @@
 	padding:5px;
 	background-color:#2B2D51; 
 	color:#fff;	
-	position:relative;
+	/*position:relative;*/
 }
 .sectionBody	{
 	border:1px solid #E0E0E0;
